:sparkles: feat: add rota post de listagem
