# src/server/modules/Record/schemas/IBodyListSchema.ts
@@ -1,0 +1,11 @@
+import { bankOptions } from '../../Bank/enums/Banks';
+import { StateType } from '../enums/StateType';
+import { TypeRequest } from '../enums/TypeRequest';
+
+export interface IBodyListSchema {
+  startDate: string;
+  endDate: string;
+  type: TypeRequest;
+  bank: bankOptions;
+  status?: StateType;
+}
